// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить меню для оффера cars 1`] = `
<Fragment>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=cars&section=used&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="print-offer"
    metrika="sales,clicks,print-offer"
    target="_blank"
    url="link/offer-print/?category=cars&sale_id="
  >
    Лист продажи
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="share"
  >
    <Share
      link="link/card/?category=cars&section=used&mark=&model=&sale_id=123456&sale_hash=aaa"
      offer={
        Object {
          "category": "cars",
          "counters": Object {},
          "hash": "aaa",
          "id": "123456",
          "section": "used",
          "seoTitle": "seoTitle",
        }
      }
      popupClassName="Share__popup-no-background"
      popupDirections="right-center"
      popupMainOffset={15}
      services="vkontakte,odnoklassniki"
      title="seoTitle"
    >
      <span>
        Поделиться
      </span>
    </Share>
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="hide"
    onClick={[Function]}
  >
    Снять с продажи
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для оффера cars с историей звонков 1`] = `
<Fragment>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=cars&section=used&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="print-offer"
    metrika="sales,clicks,print-offer"
    target="_blank"
    url="link/offer-print/?category=cars&sale_id="
  >
    Лист продажи
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="share"
  >
    <Share
      link="link/card/?category=cars&section=used&mark=&model=&sale_id=123456&sale_hash=aaa"
      offer={
        Object {
          "category": "cars",
          "counters": Object {
            "calls_all": 8,
          },
          "hash": "aaa",
          "id": "123456",
          "section": "used",
          "seller": Object {
            "redirect_phones": true,
          },
          "seller_type": "PRIVATE",
          "seoTitle": "seoTitle",
        }
      }
      popupClassName="Share__popup-no-background"
      popupDirections="right-center"
      popupMainOffset={15}
      services="vkontakte,odnoklassniki"
      title="seoTitle"
    >
      <span>
        Поделиться
      </span>
    </Share>
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="calls-history"
    onClick={[Function]}
  >
    История звонков
    <OfferCallHistoryModal
      offer={
        Object {
          "category": "cars",
          "counters": Object {
            "calls_all": 8,
          },
          "hash": "aaa",
          "id": "123456",
          "section": "used",
          "seller": Object {
            "redirect_phones": true,
          },
          "seller_type": "PRIVATE",
          "seoTitle": "seoTitle",
        }
      }
      onRequestHide={[Function]}
      visible={false}
    />
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="hide"
    onClick={[Function]}
  >
    Снять с продажи
  </Link>
</Fragment>
`;

exports[`должен правильно отрендерить меню для оффера moto 1`] = `
<Fragment>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="edit"
    metrika="clicks,edit"
    target="_blank"
    url="link/form/?category=moto&section=used&form_type=edit&sale_id=123456&sale_hash=aaa"
  >
    Редактировать
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="contract"
    metrika="sales,clicks,print-dkp"
    target="_blank"
    url="link/docs-dkp/?sale_id=123456"
  >
    Договор купли-продажи
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="share"
  >
    <Share
      link="link/card/?category=&section=used&mark=&model=&sale_id=123456&sale_hash=aaa"
      offer={
        Object {
          "category": "moto",
          "counters": Object {
            "calls_all": 8,
          },
          "hash": "aaa",
          "id": "123456",
          "section": "used",
          "seller": Object {
            "redirect_phones": true,
          },
          "seller_type": "PRIVATE",
          "seoTitle": "seoTitle",
        }
      }
      popupClassName="Share__popup-no-background"
      popupDirections="right-center"
      popupMainOffset={15}
      services="vkontakte,odnoklassniki"
      title="seoTitle"
    >
      <span>
        Поделиться
      </span>
    </Share>
  </Link>
  <Link
    className="SalesItemUnfoldedMenu-link"
    key="hide"
    onClick={[Function]}
  >
    Снять с продажи
  </Link>
</Fragment>
`;
